# clongbox

./: Cargo.toml  README.md  index.html
.github/workflows/: .keep
assets/: manifest.json  sw.js
assets/languages/: example  ipa
src/: lib.rs  main.rs
src/app/: config.rs  control.rs  fonts.rs  mod.rs  status.rs
src/panes/: groups.rs  lexicon.rs  mod.rs  phonemes.rs
src/state/: focus.rs  mod.rs
src/sub/: layout.rs  mod.rs  widgets.rs
src/tools/: evo.rs  gen.rs  mod.rs  new_phoneme.rs  sc_builder.rs
src/tools/editors/: group_editor.rs  mod.rs  phoneme_editor.rs
src/tools/sca/: mod.rs  sc_editor.rs  sc_field_editor.rs
src/types/: group.rs  language.rs  mod.rs  phoneme.rs  sc.rs  selection.rs  syllable.rs
