[package]
name = "clongbox"
version = "0.1.0"
authors = ["Hank Lewis <hank@modernatomic.com>"]
edition = "2021"
rust-version = "1.72"

[dependencies]

# Basic dependencies
log = "0.4"
serde = { version = "1", features = ["derive"] }
anyhow = "1.0.75"
regex = "1.10.2"

# File IO and font processing
toml = "0.8.6"
include_dir = { version = "0.7.3", features = ["glob"] }
rusttype = "0.9.3"

# Collections and other data structures
once_cell = "1.18.0"
slotmap = { version = "1.0.7", features = ["serde"] }
bimap = "0.6.3"
enum-iterator = "1.4.1"
enum-map = { version = "2.7.3", features = ["serde"] }

# UI
egui = "0.24.1"
egui_extras = "0.23.0"
rfd = "0.12.1"
eframe = { version = "0.24.1", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"
pollster = "0.3.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
poll-promise = { version = "0.3.0", features = ["web"] }

[profile.release]
opt-level = 2

[profile.dev.package."*"]
opt-level = 2

[patch.crates-io]